--- a/assets/style/scss/_main.scss
+++ b/assets/style/scss/_main.scss
@@ -3383,6 +3383,57 @@ $breadcrumb-divider: quote(">");
     }
   }
 
+  /* Locatios page ********************/
+  #locations-page {
+
+    .banner {
+      height: 44vh;
+      background-position: center top;
+      background-size: cover;
+
+      .container {
+
+        h1 {
+          font-size: 50px;
+          right: 5%;
+          bottom: 5%;
+        }
+      }
+    }
+
+    .content {
+      padding: 40px 0;
+      background-repeat: repeat-y;
+      background-size: 300%;
+      background-position: center top;
+
+      .breadcrumb {
+        margin-bottom: 40px;
+      }
+
+      .row {
+        margin: 0 0 40px;
+
+        .column {
+          padding: 0;
+
+          .address {
+            font-size: 18px;
+            margin-bottom: 60px;
+          }
+        }
+      }
+
+      h1 {
+        margin-bottom: 70px;
+      }
+
+      h3 {
+        margin-bottom: 30px;
+      }
+    }
+  }
+
   /* Breadcrumb ********************/
   .breadcrumb {
 
